[tool.poetry]
name = "vae-on-mouse-pancreas-single-cell-rna-sequencing-data"
version = "0.1.0"
description = ""
authors = ["Keval Pipalia <keval.pipalia@mail.mcgill.ca>"]
readme = "README.md"
packages = [{include = "vae_on_mouse_pancreas_single_cell_rna_sequencing_data"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
scanpy = "^1.9.6"
anndata = "^0.10.3"
torch = "^2.1.0"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
seaborn = "0.12.2"
jupyterlab = "^4.0.7"
igraph = "0.10"
louvain = "^0.8.1"
pandas = "2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
